# veritool

./: Cargo.toml  DIARY.md  LICENSE  PLAN.md  README.md
.claude/memory/: project_veritool.md  user_oryza.md
crates/veritool-cli/: Cargo.toml
crates/veritool-cli/src/: args.rs  main.rs
crates/veritool-cli/src/format/: csv.rs  ff.rs  ff_json.rs  hier.rs  hier_json.rs  json.rs  markdown.rs  mod.rs  report.rs  report_json.rs  signals.rs  signals_json.rs  text.rs  top.rs  top_json.rs
crates/veritool-cli/tests/: snapshot_tests.rs
crates/veritool-cli/tests/snapshots/: snapshot_tests__snap_counter_ff_module_json.snap  snapshot_tests__snap_counter_ports_csv.snap  snapshot_tests__snap_counter_ports_json.snap  snapshot_tests__snap_counter_ports_markdown.snap  snapshot_tests__snap_counter_ports_text.snap  snapshot_tests__snap_fifo_ff_hierarchy_json.snap  snapshot_tests__snap_fifo_ff_hierarchy_text.snap  snapshot_tests__snap_fifo_signals_json.snap  snapshot_tests__snap_fifo_signals_text.snap  snapshot_tests__snap_top_with_subs_hier_json.snap  snapshot_tests__snap_top_with_subs_hier_markdown.snap  snapshot_tests__snap_top_with_subs_hier_text.snap  snapshot_tests__snap_top_with_subs_top_json.snap  snapshot_tests__snap_top_with_subs_top_text.snap
crates/veritool-core/: Cargo.toml
crates/veritool-core/src/: design.rs  lib.rs  loader.rs  params.rs  report.rs  visit.rs  width.rs
crates/veritool-core/src/analyze/: ff.rs  hierarchy.rs  mod.rs  ports.rs  signals.rs  top.rs
crates/veritool-core/tests/: debug_params.rs  integration_test.rs  snapshot_tests.rs
(+9 files in other folders)
