[package]
name = "veritool-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sv-parser = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
